tests/negative/gold/named3_test.gold
tests/negative/named3_test.toit:9:5: error: Named parameters can not start with 'no-'
foo --no-x:
    ^~~~~
tests/negative/named3_test.toit:14:3: error: Unexpected --no-
  --no-x
  ^~~~~
Compilation failed.
